--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,10 +36,10 @@ layout: compress
                          About
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Blob-Posts
+                         Blog-Posts
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/life">
-                         Blob-Life
+                         Blog-Life
                          </a>
                  </h3>
             </div>
