--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -85,7 +85,7 @@
 			<li>
 				<a href="#">Blogs</a>
 				<ul class="dl-submenu">
-					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
+					<li><a href="{{ site.url }}/posts/">Our Work</a></li>
 					<li><a href="{{ site.url }}/life/">Our Life</a></li>
 				</ul>
 			</li>
