--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,6 +1,6 @@
 <br>
 <hr>
-<script src="http://apps.bdimg.com/libs/jquery/1.8.2/jquery.js"></script>
+<script src="https://apps.bdimg.com/libs/jquery/1.8.2/jquery.js"></script>
 <script src="{{ site.url }}/assets/js/jquery.share.min.js"></script>
 <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}" class="tag"><span class="term">{{ tag }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
 <div id="share-china"></div>
