--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -85,8 +85,9 @@
 			<li>
 				<a href="#">Blogs</a>
 				<ul class="dl-submenu">
-					<li><a href="{{ site.url }}/posts/">Our Work</a></li>
-					<li><a href="{{ site.url }}/life/">Our Life</a></li>
+					<li><a href="{{ site.url }}/posts/">博客</a></li>
+                    <li><a href="{{ site.url }}/yan/">妍小言</a></li>
+					<li><a href="{{ site.url }}/life/">杂记</a></li>
 				</ul>
 			</li>
 			{% for link in site.data.navigation %}
