--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,14 +32,14 @@ layout: compress
                     {% include social-links.html %}
                   <hr class="hr-line">
                   <h3 class="title">
-                         <a class="btn zoombtn" href="{{ site.url }}/about">
-                         About
-                         </a>
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Blog-Work
+                         博客
+                         </a>
+                         <a class="btn zoombtn" href="{{ site.url }}/yan">
+                         妍小言
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/life">
-                         Blog-Life
+                         杂记
                          </a>
                  </h3>
             </div>
