--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,7 +39,7 @@ layout: compress
                          妍小言
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/life">
-                         杂记
+                         生活日记
                          </a>
                  </h3>
             </div>
