--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,6 +28,8 @@ layout: compress
                     <a class="btn zoombtn" href="{{site.url}}/projects/">
                     {% elsif page.life %}
                     <a class="btn zoombtn" href="{{site.url}}/life/">
+                    {% elsif page.yan %}
+                    <a class="btn zoombtn" href="{{site.url}}/yan/">
                     {% else %}
                     <a class="btn zoombtn" href="{{site.url}}/posts/">
                     {% endif %}
