--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -87,7 +87,7 @@
 				<ul class="dl-submenu">
 					<li><a href="{{ site.url }}/posts/">博客</a></li>
                     <li><a href="{{ site.url }}/yan/">妍小言</a></li>
-					<li><a href="{{ site.url }}/life/">杂记</a></li>
+					<li><a href="{{ site.url }}/life/">生活日记</a></li>
 				</ul>
 			</li>
 			{% for link in site.data.navigation %}
