--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,9 @@ layout: compress
                         <i class="fa fa-chevron-left"></i>
                     </a>
                 </div>
+                <div style="font-size: 15px">
                 {{ content }}
+                </div>
                 <div class="entry-meta">
                 {% include meta.html %}
                 </div>
