--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,8 +47,8 @@
     <link rel="shortcut icon" href="{{ site.url }}/favicon.ico" />
     <!-- video -->
     {% if page.video %}
-    <link href="//vjs.zencdn.net/6.4.0/video-js.min.css" rel="stylesheet">
-    <script src="//vjs.zencdn.net/6.4.0/video.min.js"></script>
+    <link href="{{ site.staticUrl }}/video/static/video-js.min.css" rel="stylesheet">
+    <script src="{{ site.staticUrl }}/video/static/video.min.js"></script>
     {% endif %}
     <!-- Background Image -->
     {% if site.background %}
