--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -85,7 +85,7 @@
 			<li>
 				<a href="#">Blogs</a>
 				<ul class="dl-submenu">
-					<li><a href="{{ site.url }}/posts/">博客</a></li>
+					<li><a href="{{ site.url }}/posts/">工作</a></li>
                     <li><a href="{{ site.url }}/yan/">妍小言</a></li>
 					<li><a href="{{ site.url }}/life/">生活日记</a></li>
 				</ul>
