--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -83,7 +83,7 @@
 				</ul><!-- /.dl-submenu -->
 			</li>
 			<li>
-				<a href="#">Blogs</a>
+				<a href="#">Articles</a>
 				<ul class="dl-submenu">
 					<li><a href="{{ site.url }}/posts/">工作</a></li>
                     <li><a href="{{ site.url }}/yan/">妍小言</a></li>
