--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,4 +1,4 @@
-{% if site.disqus_shortname %}
+{% if page.comments and site.disqus_shortname %}
     <script type="text/javascript">
         var disqus_shortname = '{{ site.disqus_shortname }}';
         (function() {
