删除备案埋点

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,11 +43,11 @@ layout: compress
                          </a>
                  </h3>
             </div>
-            <h3 class="title">
-                <a href="http://www.miitbeian.gov.cn" target="_blank">
-                    <p style="font-size:1rem;font-weight:300">{{ site.beian }}</p>
-                </a>
-            </h3>
+            <!--<h3 class="title">-->
+                <!--<a href="http://www.miitbeian.gov.cn" target="_blank">-->
+                    <!--<p style="font-size:1rem;font-weight:300">{{ site.beian }}</p>-->
+                <!--</a>-->
+            <!--</h3>-->
         </div>
     </header>
     {% include scripts.html %}
