--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -17,6 +17,6 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
-    {% if page.comments != false %}
-        {% include disqus_comments.html %}
+    {% if page.comments %}
+        {% include github_comments.html %}
     {% endif %}
