--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,7 +44,8 @@ layout: compress
                 </div>
             </div>
         </div>
-        {% if page.comments and site.disqus_shortname %}<section id="disqus_thread" class="animated fadeInUp"></section><!-- /#disqus_thread -->{% endif %}
+        <!--{% if page.comments and site.disqus_shortname %}<section id="disqus_thread" class="animated fadeInUp"></section>&lt;!&ndash; /#disqus_thread &ndash;&gt;{% endif %}-->
+        {% if page.comments %}<div id="gitalk-container"></div>{% endif %}
     </header>
     {% include scripts.html %}
     {% if site.mathjax == true %}
