修改评论组件

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -17,6 +17,6 @@
       ga('send', 'pageview');
     </script>
     {% endif %}
-    {% if page.comments %}
-        {% include github_comments.html %}
-    {% endif %}
+    <!--{% if page.comments %}-->
+        <!--{% include github_comments.html %}-->
+    <!--{% endif %}-->
