修改评论组件

--- a/_includes/github_comments.html
+++ b/_includes/github_comments.html
@@ -12,6 +12,6 @@
             labels: ['comments']
         });
 
-        gitalk.render('gitalk-container')
+        gitalk.render('gitalk-container');
     </script>
 {% endif %}
