--- a/_includes/github_comments.html
+++ b/_includes/github_comments.html
@@ -1,4 +1,5 @@
 {% if page.comments %}
+    <div id="gitalk-container"></div>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
     <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
     <script type="text/javascript">
