删除注释掉的代码

--- a/_includes/github_comments.html
+++ b/_includes/github_comments.html
@@ -10,7 +10,8 @@
             owner: 'Justice-love',
             admin: ['Justice-love'],
             distractionFreeMode: false,
-            labels: ['comments']
+            labels: ['comments'],
+            title: '{{ page.title }}'
         });
 
         gitalk.render('gitalk-container');
