修改评论组件

--- a/_includes/github_comments.html
+++ b/_includes/github_comments.html
@@ -11,7 +11,8 @@
             admin: ['Justice-love'],
             distractionFreeMode: false,
             labels: ['comments'],
-            title: '{{ page.title }}'
+            title: '{{ page.title }}',
+            body: '{{ page.title }}'
         });
 
         gitalk.render('gitalk-container');
