修改评论组件

--- a/_includes/github_comments.html
+++ b/_includes/github_comments.html
@@ -12,7 +12,7 @@
             distractionFreeMode: false,
             labels: ['comments'],
             title: '{{ page.title }}',
-            body: '{{ page.title }}'
+            body: '{{ page.title }}\n{{ site.url }}{{ post.url }}'
         });
 
         gitalk.render('gitalk-container');
