修改评论组件

--- a/_includes/github_comments.html
+++ b/_includes/github_comments.html
@@ -11,8 +11,7 @@
             admin: ['Justice-love'],
             distractionFreeMode: false,
             labels: ['comments'],
-            title: '{{ page.title }}',
-            body: '{{ page.title }}\n{{ site.url }}{{ post.url }}'
+            title: '{{ page.title }}'
         });
 
         gitalk.render('gitalk-container');
