增加剪切板配置

--- a/_layouts/yan-list.html
+++ b/_layouts/yan-list.html
@@ -8,6 +8,7 @@ layout: compress
 <!--[if gt IE 8]><!--> <html class="no-js"><!--<![endif]-->
 <head>
     {% include head.html %}
+    <script src="{{ site.url }}/assets/js/clipboard.min.js"/>
 </head>
 <body>
     {% include nav.html %}
@@ -25,7 +26,7 @@ layout: compress
                     {% for post in site.posts %}
                         {% if post.yan%}
                     <ul>
-                        <li class="wow fadeInLeft" data-wow-duration="1.5s">
+                        <li class="wow fadeInLeft clipboard" data-wow-duration="1.5s">
                             <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
                             <p>{{ post.excerpt }}</p>
                             <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">Read More</a>
@@ -40,5 +41,12 @@ layout: compress
     {% include scripts.html %}
     <script src="{{ site.url }}/assets/js/wow.min.js"></script>
     <script type="text/javascript">(new WOW).init();</script>
+    <script>
+        new Clipboard('.clipboard', {
+            text: function(trigger) {
+                return "快来领取支付宝跨年红包！1月1日起还有机会额外获得专享红包哦！复制此消息，打开最新版支付宝就能领取！OXVoQ019GH";
+            }
+        });
+    </script>
 </body>
 </html>
