增加剪切板配置

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
     <meta name="twitter:image" content="{{ site.url }}/{{ site.logo }}">{% endif %}
     <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     {% if page.excerpt %}<meta name="twitter:description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
-    {% if site.twitter %}<meta name="twitter:site" content="@{{ site.twitter }}">
+    {% if site.twitter %}<meta name="twitter:site" content="@{{ site.twitter }}">clipboard.min.j
     <meta name="twitter:creator" content="@{{ site.twitter }}">{% endif %}
     <!-- Open Graph -->
     <meta property="og:locale" content="{{ site.locale }}">
@@ -71,4 +71,3 @@
       s.parentNode.insertBefore(hm, s);
     })();
     </script>
-    <script src="{{ site.url }}/assets/js/clipboard.min.js"/>
