--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -102,7 +102,7 @@ body {
 }
 .wrapper {
 	width: 75%;
-	max-width: 1200px;
+	max-width: 850px;
 	margin: 4rem auto;
 	background: $white;
 	color: $color_tuatara;
@@ -114,6 +114,22 @@ body {
 		width: 90%;
 		padding: 2em 0;
 	    box-shadow: none;
+	}
+}
+.wrapper-page {
+	width: 75%;
+	max-width: 1200px;
+	margin: 4rem auto;
+	background: $white;
+	color: $color_tuatara;
+	padding: 2em;
+	border-radius: 3px;
+	box-shadow: 0 0 10px 0 rgba($color_shark,0.3);
+	@include transition(.5s);
+	@media #{$small} {
+		width: 90%;
+		padding: 2em 0;
+		box-shadow: none;
 	}
 }
 #disqus_thread {
