--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -7,6 +7,6 @@
 <div style="clear:both"></div>
 <script>
 
-$('#share-china').share({sites: ['qzone', 'weibo','wechat', 'facebook', 'twitter', 'google']});
+$('#share-china').share({sites: ['qzone', 'weibo','wechat', 'facebook', 'twitter']});
 
 </script>
