--- a/_includes/github_comments.html
+++ b/_includes/github_comments.html
@@ -10,6 +10,7 @@
         const gitalk = new Gitalk({
             clientID: '94ea015a2463191dc163',
             clientSecret: '5fba2b9dc7bf84584dd7a7d8d070e3c0e9d260bf',
+            accessToken: '5facc6f1b9b0e6f0e66e986ba01423102f89d5c7',
             repo: 'blog-comments',
             owner: 'Justice-love',
             admin: ['Justice-love'],
