--- a/_includes/github_comments.html
+++ b/_includes/github_comments.html
@@ -18,7 +18,7 @@
             labels: ['comments'],
             title: '{{ page.title }}',
             id: id,
-            proxy: 'https://justice-love.com/proxy_pass/https://github.com/login/oauth/access_token'
+            proxy: 'https://proxy.justice-love.com/https://github.com/login/oauth/access_token'
         });
 
         gitalk.render('gitalk-container');
