--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,6 +7,7 @@
 				<ul class="dl-submenu">
 					<li><a href="{{ site.url }}/posts/">日志</a></li>
                     <li><a href="{{ site.url }}/yan/">妍小言</a></li>
+					<li><a href="{{ site.url }}/shu/">舒小书</a></li>
 					<li><a href="{{ site.url }}/haoran/">浩然说</a></li>
 					<li><a href="{{ site.url }}/life/">生活日记</a></li>
 				</ul>
