--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,10 @@ layout: compress
                          <a class="btn zoombtn" href="{{ site.url }}/yan">
                          妍小言
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/life">
+                      <a class="btn zoombtn" href="{{ site.url }}/shu">
+                          舒小书
+                      </a>
+                      <a class="btn zoombtn" href="{{ site.url }}/life">
                          生活日记
                          </a>
                  </h3>
