--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -23,7 +23,7 @@ layout: compress
                 </div>
                 <div class="post-list">
                     {% for post in site.posts %}
-                        {% if post.project == null and post.life == null and post.yan == null%}
+                        {% if post.project == null and post.life == null and post.yan == null and post.shu == null%}
                     <ul>
                         <li class="wow fadeInLeft" data-wow-duration="1.5s">
                             <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
