--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,6 +30,8 @@ layout: compress
                     <a class="btn zoombtn" href="{{site.url}}/life/">
                     {% elsif page.yan %}
                     <a class="btn zoombtn" href="{{site.url}}/yan/">
+                    {% elsif page.shu %}
+                    <a class="btn zoombtn" href="{{site.url}}/shu/">
                     {% else %}
                     <a class="btn zoombtn" href="{{site.url}}/posts/">
                     {% endif %}
