--- a/_includes/github_comments.html
+++ b/_includes/github_comments.html
@@ -17,8 +17,8 @@
             distractionFreeMode: false,
             labels: ['comments'],
             title: '{{ page.title }}',
-            id: id,
-            proxy: 'https://proxy.justice-love.com/https://github.com/login/oauth/access_token'
+            id: id
+            // proxy: 'https://proxy.justice-love.com/https://github.com/login/oauth/access_token'
         });
 
         gitalk.render('gitalk-container');
